# example-upload-image

./: CHANGELOG.md  CMakeLists.txt  README.md  prj-ncs.conf  prj-zephyr.conf  prj.conf  sample.yaml  west-ncs.yml  west-zephyr.yml
boards/: esp32_devkitc_wrover.conf  esp32_devkitc_wrover.overlay  mimxrt1024_evk.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
dts/bindings/: arducam,mega.yaml  vendor-prefixes.txt
pipelines/: Image-to-Amazon-S3.yml
src/: fables.h  main.c
src/arducam/: camera.c  camera.h  spi_hal.c  spi_hal.h  zephyrHal.h
